set a min width for the sidebar to stop text overflowing

--- a/client/src/components/SidebarLeft/sidebar.scss
+++ b/client/src/components/SidebarLeft/sidebar.scss
@@ -4,11 +4,15 @@
   border: $borderleft;
 }
 
+.aside {
+  min-width: 160px;
+}
+
 .sideOptions {
-  padding-left: $padding-small;
+  padding-left: $padding-tiny;
   
 }
 
 .sectionPadding {
-  padding-left: $padding-tiny + $padding-tiny;
+  padding-left: $padding-tiny;
 }
